# timedot-invoice

./: .ghcid  .gitignore  .hlint.yaml  README.md  amb.cabal  flake.nix  garnix.yaml  hie.yaml  timedot-invoice.cabal
.github/workflows/: publish.yaml
content/: index.md
example/: hours.journal  hours.journal.tpl  hours.journal.tpl.yaml  hours.timedot  hours.timedot.html  hours.timedot.tpl  hours.timedot.tpl.yaml
src/: Main.hs
src/Site/: Amb.hs
src/TI/: Aeson.hs  HLedger.hs  Heist.hs  Matrix.hs
