cabal-version:      2.4
name:               timedot-invoice
version:            0.1.0.0
license:            AGPL-3.0-only
copyright:          2021 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

executable timedot-invoice
  build-depends:
    , aeson
    , async
    , base
    , commonmark-simple
    , containers
    , data-default
    , dependent-sum
    , directory
    , ema                   >=0.7
    , filepath
    , filepattern
    , generics-sop
    , heist-emanote
    , hledger
    , hledger-lib
    , lens
    , map-syntax
    , monad-logger
    , mtl
    , neat-interpolation
    , optics-core
    , optparse-applicative
    , pandoc
    , pandoc-types
    , path-tree
    , relude
    , shower
    , some
    , sop-core
    , tagged
    , text
    , time
    , unionmount            >=0.2
    , unliftio
    , url-slug
    , uuid
    , with-utf8
    , xmlhtml

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  main-is:            Main.hs
  other-modules:
    TI.Heist
    TI.HLedger

  hs-source-dirs:     src
  default-language:   Haskell2010
